--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redis": "^4.7.1",
     "socket.io": "^4.8.1",
     "socket.io-redis": "^6.1.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
